--- a/q/275270.html
+++ b/q/275270.html
@@ -26,10 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>083</td><td>Python</td><td>240831T190213Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275283#275283">shape wa</a></td></tr>
-<tr d-ix="1"><td>083</td><td>Charcoal</td><td>240901T110835Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275290#275290">Neil</a></td></tr>
+<tr d-ix="0"><td>054</td><td>JavaScript Node.js</td><td>240902T091602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275306#275306">l4m2</a></td></tr>
+<tr d-ix="1"><td>083</td><td>Python</td><td>240831T190213Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275283#275283">shape wa</a></td></tr>
+<tr d-ix="2"><td>083</td><td>Charcoal</td><td>240901T110835Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275290#275290">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>85</s> <s>84</s> 83 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 54 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>(s,i=0)=&gt;g=(n,k)=&gt;k?n?[...g(n-1,k),g(n,k-1)]:[]:s[i++]
+</code></pre>
+<p><a href="https://tio.run/##dcpBDsIgFEXRuRvpJwVi1VET7EIIA6SAFPqppXH7iM6dvdx3Fv3WxexhOxjm2VYnKhQaxJmIuxeANLYRJ5wk59wDsqEV6r8HG4gapRqLDH2vqslYcrI8ZQ8OOv0ws3X@GZaOwI1eCDn9FTGtmLfXXo6fvTZbPw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Trivial</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>85</s> <s>84</s> 83 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>f=lambda s,n,l,r=1:n and[f(s,n-1,i+1,i%2*2-1)for i in range(l)[::r]][::r]or next(s)
 </code></pre>
 <p>Takes the string (<code>s</code>) as an iterator of characters -- to take a <code>str</code>, replace <code>n and</code> with <code>n*[s:=iter(s)]and</code> for <s>+16</s> +12 bytes (-4 bytes by att).<br />
@@ -45,7 +53,7 @@ Assumes <code>l</code> is nonzero -- to support the case where <code>l</code> is
 </code></pre>
 <p>Not really much to say -- just uses recursion to build the specified simplex, with characters coming from a stateful iterator. In the golfed code, instead of a boolean <code>reverse</code> parameter, we take <code>r</code>: 1 for forwards, -1 for backwards. With that change, <code>maybe_rev</code> simply becomes <code>lambda seq: seq[::r]</code>, and we use powers of -1 to express alternating directions.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 83 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 83 bytes</h1>
 <pre><code>≔⪪⮌Ｓ¹θ≔ＥＮ¹ηＦＮＵＭη…η⊕λ≔⟦⟦⟧Ｘ⊟η¹⟧η⊞υ⟦⟦⟧η⟧ＦυＦＬι«≔§ικζ¿№ζ¹Ｆ⁺²κＵＭζ⎇λ§⮌ζν∧μ⊟θ⊞υ⎇﹪κ²ζ⮌ζ»⭆¹⊟η
 </code></pre>
 <p><a href="https://tio.run/##VZE9b8MgEIbn@FcwHhIdkqZf6hR5itRUVtMtyuDYZ0ODwcGQD1f97S7EtqIMCKF7eN7jyHhqMp3Krls0jSgVrGspLHzhEU2DsFS1s2trhCqBUkamfh3oezTAq7TukU9X7dDAQHBPFNqQ@xolHo91VaUqB85IfMkkxlzX4bBUmcEKlcUcJKW3iM1my0iiT96QBPQase0zEtdwcIxcGb4dUx0l1/0DVWk5CJ/8G00G38IuVY5nEIzsvav1lyaiIBBrpyy0wT5cT6RrYBawu8498o1GpeYCkpFRNw6s9U7l18KTVWi8hgMN7yEoGyRjx6NhpXMnNewZmYVmGLl5wgz@osSP3kL/A2Ha097JQ7nr0l2WY1Fy8bOXldL1wTTWHU/nSzudPc6fnl9e36J5NO8ejvIf" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes input in reverse order from the test cases. Explanation: Too many edge cases costing me a whole 10 bytes.</p>
