--- a/q/275303.html
+++ b/q/275303.html
@@ -26,10 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>091</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
-<tr d-ix="1"><td>092</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
+<tr d-ix="0"><td>121</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
+<tr d-ix="1"><td>091</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
+<tr d-ix="2"><td>092</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 91 bytes</h1>
+<div id="pu0" class="pu"><h1>Google Sheets, 121 bytes</h1>
+<pre><code>=let(a,A3,b,B3,c,C3,s,&quot;-&quot;,f,lambda(x,y,z,if(x&amp;y&amp;z=&quot;000229&quot;,&quot;maybe&quot;,isdate(&quot;20&quot;&amp;x&amp;s&amp;y&amp;s&amp;z))),{f(a,b,c),f(c,a,b),f(c,b,a)})
+</code></pre>
+<p>Put the three components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
+<p><img src="https://i.sstatic.net/Knu53B2G.png" alt="screenshot" /></p>
+<p>Ungolfed:</p>
+<pre><code>=let( 
+  a, A3, b, B3, c, C3, s, &quot;-&quot;, 
+  f, lambda(x, y, z, 
+    if(x &amp; y &amp; z = &quot;000229&quot;, &quot;maybe&quot;, isdate(&quot;20&quot; &amp; x &amp; s &amp; y &amp; s &amp; z)) 
+  ), 
+  { 
+    f(a, b, c), 
+    f(c, a, b), 
+    f(c, b, a) 
+  } 
+)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 91 bytes</h1>
 <p>Expects a string of 6 digits.</p>
 <p>Returns a triplet <code>[YYMMDD, MMDDYY, DDMMYY]</code> of binary values, with <span class="math-container">\$0\$</span> for <em>valid</em> and <span class="math-container">\$1\$</span> for <em>invalid</em>. Returns <em>valid</em> for <em>maybe</em>.</p>
 
@@ -131,7 +151,7 @@
 )                  // end of map()
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 92 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 92 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;[(g=t=&gt;!!+new Date(20+t.replace(/\d/g,c=&gt;x[c])))('01-23-45'),g('45-01-23'),g('45-23-01')]
 </code></pre>
