--- a/q/275303.html
+++ b/q/275303.html
@@ -26,25 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>121</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
+<tr d-ix="0"><td>115</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 <tr d-ix="1"><td>091</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
 <tr d-ix="2"><td>092</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Google Sheets, 121 bytes</h1>
-<pre><code>=let(a,A3,b,B3,c,C3,s,&quot;-&quot;,f,lambda(x,y,z,if(x&amp;y&amp;z=&quot;000229&quot;,&quot;maybe&quot;,isdate(&quot;20&quot;&amp;x&amp;s&amp;y&amp;s&amp;z))),{f(a,b,c),f(c,a,b),f(c,b,a)})
+<div id="pu0" class="pu"><h1>Google Sheets, 115 bytes</h1>
+<pre><code>=let(f,lambda(x,y,z,if(x&amp;y&amp;z=&quot;000229&quot;,&quot;maybe&quot;,isdate(join(&quot;-&quot;,20&amp;x,y,z)))),{f(A3,B3,C3),f(C3,A3,B3),f(C3,B3,A3)})
 </code></pre>
-<p>Put the three components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
-<p><img src="https://i.sstatic.net/Knu53B2G.png" alt="screenshot" /></p>
+<p>Put the three date components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
+<p><img src="https://i.sstatic.net/MBQ4aD9p.png" alt="screenshot" /></p>
 <p>Ungolfed:</p>
 <pre><code>=let( 
-  a, A3, b, B3, c, C3, s, &quot;-&quot;, 
   f, lambda(x, y, z, 
-    if(x &amp; y &amp; z = &quot;000229&quot;, &quot;maybe&quot;, isdate(&quot;20&quot; &amp; x &amp; s &amp; y &amp; s &amp; z)) 
+    if(x &amp; y &amp; z = &quot;000229&quot;, &quot;maybe&quot;, isdate(join(&quot;-&quot;, 20 &amp; x, y, z))) 
   ), 
   { 
-    f(a, b, c), 
-    f(c, a, b), 
-    f(c, b, a) 
+    f(A3, B3, C3), 
+    f(C3, A3, B3), 
+    f(C3, B3, A3) 
   } 
 )
 </code></pre>
