--- a/q/275303.html
+++ b/q/275303.html
@@ -26,31 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>113</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
-<tr d-ix="1"><td>091</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
+<tr d-ix="0"><td>091</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
+<tr d-ix="1"><td>113</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 <tr d-ix="2"><td>092</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Google Sheets, 113 bytes</h1>
-<pre><code>=let(f,lambda(x,y,z,if(x&amp;y&amp;z=&quot;000229&quot;,&quot;maybe&quot;,isdate(join(&quot;-&quot;,20&amp;x,y,z)))),{f(A3,B3,C3),f(C3,A3,B3),f(C3,B3,A3)})
-</code></pre>
-<p>Put the three date components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
-<p><img src="https://i.sstatic.net/MBQ4aD9p.png" alt="screenshot" /></p>
-<p>Ungolfed:</p>
-<pre><code>=let( 
-  f, lambda(x, y, z, 
-    if(x &amp; y &amp; z = &quot;000229&quot;, &quot;maybe&quot;, isdate(join(&quot;-&quot;, 20 &amp; x, y, z))) 
-  ), 
-  { 
-    f(A3, B3, C3), 
-    f(C3, A3, B3), 
-    f(C3, B3, A3) 
-  } 
-)
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 91 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 91 bytes</h1>
 <p>Expects a string of 6 digits.</p>
-<p>Returns a triplet <code>[YYMMDD, MMDDYY, DDMMYY]</code> of binary values, with <span class="math-container">\$0\$</span> for <em>valid</em> and <span class="math-container">\$1\$</span> for <em>invalid</em>. Returns <em>valid</em> for <em>maybe</em>.</p>
+<p>Returns a triplet <code>[YYMMDD, MMDDYY, DDMMYY]</code> of binary values, with <span class="math-container">\$0\$</span> for <em>valid</em> and <span class="math-container">\$1\$</span> for <em>invalid</em>. Returns <em>valid</em> for the <em>&quot;maybe&quot;</em> cases.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[2,6,8].map(p=&gt;(g=q=&gt;v=+s.substr((p^q)%6,2))``&gt;12|!v|28+(v-2?3^~v%9&amp;1:g(2)%4&lt;1)&lt;g(8)|!v)
 </code></pre>
@@ -148,6 +130,24 @@
   ) &lt; g(8)         //   fail if the day is greater than the upper bound
   | !v             //   or the day is 0
 )                  // end of map()
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>Google Sheets, 113 bytes</h1>
+<pre><code>=let(f,lambda(x,y,z,if(x&amp;y&amp;z=&quot;000229&quot;,&quot;maybe&quot;,isdate(join(&quot;-&quot;,20&amp;x,y,z)))),{f(A3,B3,C3),f(C3,A3,B3),f(C3,B3,A3)})
+</code></pre>
+<p>Put the three date components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
+<p><img src="https://i.sstatic.net/kEnLCy0b.png" alt="screenshot" /></p>
+<p>Ungolfed:</p>
+<pre><code>=let( 
+  f, lambda(x, y, z, 
+    if(x &amp; y &amp; z = &quot;000229&quot;, &quot;maybe&quot;, isdate(join(&quot;-&quot;, 20 &amp; x, y, z))) 
+  ), 
+  { 
+    f(A3, B3, C3), 
+    f(C3, A3, B3), 
+    f(C3, B3, A3) 
+  } 
+)
 </code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 92 bytes</h1>
