--- a/q/275303.html
+++ b/q/275303.html
@@ -35,7 +35,7 @@
 </code></pre>
 <p>Put the three date components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
 <p><img src="https://i.sstatic.net/9Q4lr22K.png" alt="screenshot" /></p>
-<p>The formula lists the components in a matrix with valid combinations down each of three columns, and iterates those columns to get each combo as <code>yyyy-MM-dd</code> to determine whether the combo is a valid date.</p>
+<p>The formula lists the components in a matrix with the combinations listed in the question down each of three columns, iterates those columns to get each combo as <code>yyyy-MM-dd</code>, and determines whether it is a valid date.</p>
 <p>Years like 20<strong>00</strong> and 24<strong>00</strong> are leap years, but years like 18<strong>00</strong>, 19<strong>00</strong> and 21<strong>00</strong> aren't. A string like <code>000229</code> would therefore be indeterminate in the <code>yyMMdd</code> format, because we don't know whether it refers to <code>1900</code>, <code>2000</code> or some other year. To show <code>maybe</code> with these strings, use this (<strong>99 bytes</strong>):</p>
 <pre><code>=bycol({A3,C3,C3;B3,A3,B3;C3,B3,A3},lambda(_,if(join(,_)=&quot;000229&quot;,&quot;maybe&quot;,isdate(20&amp;join(&quot;-&quot;,_)))))
 </code></pre>
