--- a/q/275303.html
+++ b/q/275303.html
@@ -26,10 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
-<tr d-ix="1"><td>091</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
+<tr d-ix="0"><td>093</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
+<tr d-ix="1"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
+<tr d-ix="2"><td>091</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Google Sheets, 69 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>x=&gt;['024','402','420'].map(t=&gt;x[t%10]==(new Date(4+t.replace(/./g,c=&gt;x[c]+x[++c]+' '))+0)[8])
+</code></pre>
+<p><a href="https://tio.run/##fZbdboJAEIXv@xTcNECwyMxgK2nwqn0KYyJFNG1QidDWPr3dxbaBwhlN3MjH/C3n6L5lH1mdn16r5u5w3BSXbXo5p4ulG3HsTtw4YvvJkbsK91nlNenivGxuKVqlqXcoPp2nrCm8OGjCU1GVWV5403C6m@T2tnwVnJdBYBbXcX0/iPzlfOVfHvPjoT6WRVged976JmpfjrPNyrroL1dGmCUJZKTkJJuzOb2bayOMMRMlThjXU/pkpU9W@mSeK8zU22dfL2M5BdeTSGO4FxGNwX0hsr2MxxHjnIahnKRoiRQtkaIl6mnppyW7XBH1rvUQQyQ4qjPbf9Rp8R9i3CHjDrsaGiBYS3AtwbVEFARHjjsKGSBCUTNcawZr9RQ3QDgKPhQa2ahfSZEMw/5YjOOEcJzgnxKKZ/cPiCUJlD4rdmLFTqzYibGdGNuJsZ0MQjpm7DTGTmPsNMZOY@g0YvvGSCAC6m8RrgXmsgjMZZtAomsZYYYEaViMcwppDOfEIrfDIdHZ6WCcYLHayYdx7ZYlCT5GGMboGJEkvcc6ZKQw8LfXMkEMb8u6c2gLzKmtThee6wZbr/b9sMo2z4eNx5EfmK@Xbw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Arnauld's comment say pure <code>Date</code> won't work</p>
+</div>
+<div id="pu1" class="pu"><h1>Google Sheets, 69 bytes</h1>
 <pre><code>=bycol({A3,C3,C3;B3,A3,B3;C3,B3,A3},lambda(_,isdate(20&amp;join(&quot;-&quot;,_))))
 </code></pre>
 <p>Put the three date components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
@@ -51,7 +59,7 @@
 )
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 91 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 91 bytes</h1>
 <p>Expects a string of 6 digits.</p>
 <p>Returns a triplet <code>[YYMMDD, MMDDYY, DDMMYY]</code> of binary values, with <span class="math-container">\$0\$</span> for <em>valid</em> and <span class="math-container">\$1\$</span> for <em>invalid</em>. Returns <em>valid</em> for the <em>&quot;maybe&quot;</em> cases.</p>
 
