--- a/q/275303.html
+++ b/q/275303.html
@@ -26,40 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>093</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
-<tr d-ix="1"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
-<tr d-ix="2"><td>091</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
+<tr d-ix="0"><td>088</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
+<tr d-ix="1"><td>093</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
+<tr d-ix="2"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 88 bytes</h1>
+<p>A mix of my previous answer with <a href="https://codegolf.stackexchange.com/a/275304/58563">@l4m2's answer</a>.</p>
+<p>Returns a triplet <code>[YYMMDD, MMDDYY, DDMMYY]</code> of Boolean values (<em>true</em> for <em>valid</em>). Returns <em>valid</em> for the <em>&quot;maybe&quot;</em> cases.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>x=&gt;['024','402','420'].map(t=&gt;x[t%10]==(new Date(4+t.replace(/./g,c=&gt;x[c]+x[++c]+' '))+0)[8])
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;[2,6,8].map(p=&gt;(new Date(4+(g=q=&gt;s.substr(i=(p^q)%6,2)+&quot; &quot;)(2)+g``+g(8))+0)[8]==s[i])
 </code></pre>
-<p><a href="https://tio.run/##fZbdboJAEIXv@xTcNECwyMxgK2nwqn0KYyJFNG1QidDWPr3dxbaBwhlN3MjH/C3n6L5lH1mdn16r5u5w3BSXbXo5p4ulG3HsTtw4YvvJkbsK91nlNenivGxuKVqlqXcoPp2nrCm8OGjCU1GVWV5403C6m@T2tnwVnJdBYBbXcX0/iPzlfOVfHvPjoT6WRVged976JmpfjrPNyrroL1dGmCUJZKTkJJuzOb2bayOMMRMlThjXU/pkpU9W@mSeK8zU22dfL2M5BdeTSGO4FxGNwX0hsr2MxxHjnIahnKRoiRQtkaIl6mnppyW7XBH1rvUQQyQ4qjPbf9Rp8R9i3CHjDrsaGiBYS3AtwbVEFARHjjsKGSBCUTNcawZr9RQ3QDgKPhQa2ahfSZEMw/5YjOOEcJzgnxKKZ/cPiCUJlD4rdmLFTqzYibGdGNuJsZ0MQjpm7DTGTmPsNMZOY@g0YvvGSCAC6m8RrgXmsgjMZZtAomsZYYYEaViMcwppDOfEIrfDIdHZ6WCcYLHayYdx7ZYlCT5GGMboGJEkvcc6ZKQw8LfXMkEMb8u6c2gLzKmtThee6wZbr/b9sMo2z4eNx5EfmK@Xbw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Arnauld's comment say pure <code>Date</code> won't work</p>
-</div>
-<div id="pu1" class="pu"><h1>Google Sheets, 69 bytes</h1>
-<pre><code>=bycol({A3,C3,C3;B3,A3,B3;C3,B3,A3},lambda(_,isdate(20&amp;join(&quot;-&quot;,_))))
-</code></pre>
-<p>Put the three date components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
-<p><img src="https://i.sstatic.net/9Q4lr22K.png" alt="screenshot" /></p>
-<p>The formula lists the components in a matrix with the combinations listed in the question down each of three columns, iterates those columns to get each combo as <code>yyyy-MM-dd</code>, and determines whether it is a valid date.</p>
-<p>Years like 20<strong>00</strong> and 24<strong>00</strong> are leap years, but years like 18<strong>00</strong>, 19<strong>00</strong> and 21<strong>00</strong> aren't. A string like <code>000229</code> would therefore be indeterminate in the <code>yyMMdd</code> format, because we don't know whether it refers to <code>1900</code>, <code>2000</code> or some other year. To show <code>maybe</code> with these strings, use this (<strong>99 bytes</strong>):</p>
-<pre><code>=bycol({A3,C3,C3;B3,A3,B3;C3,B3,A3},lambda(_,if(join(,_)=&quot;000229&quot;,&quot;maybe&quot;,isdate(20&amp;join(&quot;-&quot;,_)))))
-</code></pre>
-<p>Ungolfed:</p>
-<pre><code>=bycol( 
-  { 
-    A3, C3, C3; 
-    B3, A3, B3; 
-    C3, B3, A3 
-  }, 
-  lambda(col, 
-    if(join(&quot;&quot;, col) = &quot;000229&quot;, &quot;maybe&quot;, isdate(20 &amp; join(&quot;-&quot;, col))) 
-  ) 
-)
-</code></pre>
-</div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 91 bytes</h1>
+<p><a href="https://tio.run/##fZZdjtMwFIXfZxWXSKi2GjL1dVsakMsLsIF5LEWT6bglKNOfOC2qEDtA4oVH2AfrmQ2whOKEATXTHqdSLOXLuT/OuWk@ZrvMzcp8XT1brm7tYW4OzownHA/j0TS5y9ZibcZiaT/R66yyot8VC7MxY5e47Y2rSpEbsX6/kU@HMctuRJEUfl1cX3cXYiRltycno6kxbpJP5aG0m21eWhHNXSST0ma3b/PCXu2XM9GTSbW6qsp8uRAycesir0T0bulvm6/KN9nsg/DJyIzp8wVRYSuakIspSZKMpmTIwwfRJXUvZexvqo/SOg/nwsmX/spstXSrwibFaiG82MPmlNidLfdC7GLKZZ1iR08MicyXTMZQNM8KZyMp6RV1fv/6dv/juz936AV17n9@7fjIX@Sh1xxEzb3t5aJBCrM0hUwFYqo6ZlVu/bUzjDHTAZ1mnC9QJwfq5ECdzKMA8/nusv3NuZga59O9EMO1aB1icF@Uqms5r1OMY3qGYqqAl1TASyrgJdXy0kNJ9fIXqda1FmKINFYd9fYYHZX4CDGukHGFxx46QTCXxrk0zqV1AMGW@0cOOUEKqQY41wDmajnuBGEVfCjqzEb9s5TSp7L/rI91WmGdxq8S1R8MnyOWptD6HBgnDowTB8aJ8TgxHifG4@QR8jHjSWM8aYwnjfGkMZw0xfUPIw0RcH@DcC7QV41AX3URyHQNU5ghQ3rWxzG1CjEcE5u8bg6Zru4O6jQ2a935qa7ZsjTFnxGeMfqMSNPWYz1lKsDA317DNGJwW/4A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<hr />
+<h1>JavaScript (ES6), 91 bytes</h1>
 <p>Expects a string of 6 digits.</p>
 <p>Returns a triplet <code>[YYMMDD, MMDDYY, DDMMYY]</code> of binary values, with <span class="math-container">\$0\$</span> for <em>valid</em> and <span class="math-container">\$1\$</span> for <em>invalid</em>. Returns <em>valid</em> for the <em>&quot;maybe&quot;</em> cases.</p>
 
@@ -159,6 +138,35 @@
   ) &lt; g(8)         //   fail if the day is greater than the upper bound
   | !v             //   or the day is 0
 )                  // end of map()
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>x=&gt;['024','402','420'].map(t=&gt;x[t%10]==(new Date(4+t.replace(/./g,c=&gt;x[c]+x[++c]+' '))+0)[8])
+</code></pre>
+<p><a href="https://tio.run/##fZbdboJAEIXv@xTcNECwyMxgK2nwqn0KYyJFNG1QidDWPr3dxbaBwhlN3MjH/C3n6L5lH1mdn16r5u5w3BSXbXo5p4ulG3HsTtw4YvvJkbsK91nlNenivGxuKVqlqXcoPp2nrCm8OGjCU1GVWV5403C6m@T2tnwVnJdBYBbXcX0/iPzlfOVfHvPjoT6WRVged976JmpfjrPNyrroL1dGmCUJZKTkJJuzOb2bayOMMRMlThjXU/pkpU9W@mSeK8zU22dfL2M5BdeTSGO4FxGNwX0hsr2MxxHjnIahnKRoiRQtkaIl6mnppyW7XBH1rvUQQyQ4qjPbf9Rp8R9i3CHjDrsaGiBYS3AtwbVEFARHjjsKGSBCUTNcawZr9RQ3QDgKPhQa2ahfSZEMw/5YjOOEcJzgnxKKZ/cPiCUJlD4rdmLFTqzYibGdGNuJsZ0MQjpm7DTGTmPsNMZOY@g0YvvGSCAC6m8RrgXmsgjMZZtAomsZYYYEaViMcwppDOfEIrfDIdHZ6WCcYLHayYdx7ZYlCT5GGMboGJEkvcc6ZKQw8LfXMkEMb8u6c2gLzKmtThee6wZbr/b9sMo2z4eNx5EfmK@Xbw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Arnauld's comment say pure <code>Date</code> won't work</p>
+</div>
+<div id="pu2" class="pu"><h1>Google Sheets, 69 bytes</h1>
+<pre><code>=bycol({A3,C3,C3;B3,A3,B3;C3,B3,A3},lambda(_,isdate(20&amp;join(&quot;-&quot;,_))))
+</code></pre>
+<p>Put the three date components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
+<p><img src="https://i.sstatic.net/9Q4lr22K.png" alt="screenshot" /></p>
+<p>The formula lists the components in a matrix with the combinations listed in the question down each of three columns, iterates those columns to get each combo as <code>yyyy-MM-dd</code>, and determines whether it is a valid date.</p>
+<p>Years like 20<strong>00</strong> and 24<strong>00</strong> are leap years, but years like 18<strong>00</strong>, 19<strong>00</strong> and 21<strong>00</strong> aren't. A string like <code>000229</code> would therefore be indeterminate in the <code>yyMMdd</code> format, because we don't know whether it refers to <code>1900</code>, <code>2000</code> or some other year. To show <code>maybe</code> with these strings, use this (<strong>99 bytes</strong>):</p>
+<pre><code>=bycol({A3,C3,C3;B3,A3,B3;C3,B3,A3},lambda(_,if(join(,_)=&quot;000229&quot;,&quot;maybe&quot;,isdate(20&amp;join(&quot;-&quot;,_)))))
+</code></pre>
+<p>Ungolfed:</p>
+<pre><code>=bycol( 
+  { 
+    A3, C3, C3; 
+    B3, A3, B3; 
+    C3, B3, A3 
+  }, 
+  lambda(col, 
+    if(join(&quot;&quot;, col) = &quot;000229&quot;, &quot;maybe&quot;, isdate(20 &amp; join(&quot;-&quot;, col))) 
+  ) 
+)
 </code></pre>
 </div>
 
