--- a/q/275303.html
+++ b/q/275303.html
@@ -31,7 +31,8 @@
 <tr d-ix="2"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1>JavaScript (ES6), 88 bytes</h1>
-<p>A mix of my previous answer with <a href="https://codegolf.stackexchange.com/a/275304/58563">@l4m2's answer</a>.</p>
+<p><em>A mix of my previous answer with <a href="https://codegolf.stackexchange.com/a/275304/58563">@l4m2's answer</a>.</em></p>
+<p>Expects a string of 6 digits.</p>
 <p>Returns a triplet <code>[YYMMDD, MMDDYY, DDMMYY]</code> of Boolean values (<em>true</em> for <em>valid</em>). Returns <em>valid</em> for the <em>&quot;maybe&quot;</em> cases.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[2,6,8].map(p=&gt;(new Date(4+(g=q=&gt;s.substr(i=(p^q)%6,2)+&quot; &quot;)(2)+g``+g(8))+0)[8]==s[i])
@@ -39,6 +40,7 @@
 <p><a href="https://tio.run/##fZZdjtMwFIXfZxWXSKi2GjL1dVsakMsLsIF5LEWT6bglKNOfOC2qEDtA4oVH2AfrmQ2whOKEATXTHqdSLOXLuT/OuWk@ZrvMzcp8XT1brm7tYW4OzownHA/j0TS5y9ZibcZiaT/R66yyot8VC7MxY5e47Y2rSpEbsX6/kU@HMctuRJEUfl1cX3cXYiRltycno6kxbpJP5aG0m21eWhHNXSST0ma3b/PCXu2XM9GTSbW6qsp8uRAycesir0T0bulvm6/KN9nsg/DJyIzp8wVRYSuakIspSZKMpmTIwwfRJXUvZexvqo/SOg/nwsmX/spstXSrwibFaiG82MPmlNidLfdC7GLKZZ1iR08MicyXTMZQNM8KZyMp6RV1fv/6dv/juz936AV17n9@7fjIX@Sh1xxEzb3t5aJBCrM0hUwFYqo6ZlVu/bUzjDHTAZ1mnC9QJwfq5ECdzKMA8/nusv3NuZga59O9EMO1aB1icF@Uqms5r1OMY3qGYqqAl1TASyrgJdXy0kNJ9fIXqda1FmKINFYd9fYYHZX4CDGukHGFxx46QTCXxrk0zqV1AMGW@0cOOUEKqQY41wDmajnuBGEVfCjqzEb9s5TSp7L/rI91WmGdxq8S1R8MnyOWptD6HBgnDowTB8aJ8TgxHifG4@QR8jHjSWM8aYwnjfGkMZw0xfUPIw0RcH@DcC7QV41AX3URyHQNU5ghQ3rWxzG1CjEcE5u8bg6Zru4O6jQ2a935qa7ZsjTFnxGeMfqMSNPWYz1lKsDA317DNGJwW/4A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <hr />
 <h1>JavaScript (ES6), 91 bytes</h1>
+<p><em>Without <code>Date()</code>.</em></p>
 <p>Expects a string of 6 digits.</p>
 <p>Returns a triplet <code>[YYMMDD, MMDDYY, DDMMYY]</code> of binary values, with <span class="math-container">\$0\$</span> for <em>valid</em> and <span class="math-container">\$1\$</span> for <em>invalid</em>. Returns <em>valid</em> for the <em>&quot;maybe&quot;</em> cases.</p>
 
