--- a/q/275165.html
+++ b/q/275165.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>109</td><td>C gcc</td><td>240831T014044Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275274#275274">Consindi</a></td></tr>
-<tr d-ix="1"><td>114</td><td>C clang</td><td>240828T135743Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275205#275205">jdt</a></td></tr>
-<tr d-ix="2"><td>316</td><td>Rust</td><td>240831T124135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275279#275279">138 Aspe</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Rust</td><td>240831T124135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275279#275279">138 Aspe</a></td></tr>
+<tr d-ix="1"><td>109</td><td>C gcc</td><td>240831T014044Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275274#275274">Consindi</a></td></tr>
+<tr d-ix="2"><td>114</td><td>C clang</td><td>240828T135743Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275205#275205">jdt</a></td></tr>
 <tr d-ix="3"><td>117</td><td>Scala 3</td><td>240831T021730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275275#275275">138 Aspe</a></td></tr>
 <tr d-ix="4"><td>011</td><td>Brachylog</td><td>240829T094440Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275233#275233">Fatalize</a></td></tr>
 <tr d-ix="5"><td>066</td><td>R</td><td>240827T191400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275194#275194">David Jo</a></td></tr>
@@ -46,41 +46,11 @@
 <tr d-ix="17"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="18"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 109 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>n;main(c,s)char**s;{for(n=c;s[n]||(++s)[n=1];n++)printf(&quot;%s %s %s %s &quot;,*s,s[n],s[n],s[!s[n+1]*(n-1?1:3-c)]);}
-</code></pre>
-<p><a href="https://tio.run/##PYrNCsIwEAZfRQtCfppD8KKG4IOUHOLW1IJuJdub9dX91IPCMHMZcgMRwOGWR1bUiqZLrsZIeJSpKo4UpOO0LMpa0R1HnwJbq@915LmoZiOrP01rpP3eP60/tT4Zxc4f/WHrSCcdngAyTiD0OKO8qFzzIHAy95F2@zc" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, <s>115</s> 114 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>f(**s,n,*o){for(int*w,j=n-1,i=*o=0;i&lt;n;i-=i-j&amp;&amp;!strstr(o,w)?j=i-!strcat(o,w):-1)asprintf(&amp;w,&quot;%s %s\n&quot;,s[j],s[i]);}
-</code></pre>
-<p><a href="https://tio.run/##ldDdaoMwFAfwe5/iTKhEicyvqzkZ@3oK50WWaRdxSTHphBVffS7GdhA7GBU50f850R@hIe0I305Tg4JAYo4D4R8a0SPGVTDgtuBhjFkRiCLK2S3PWViwsPW8K6l6fSOBB/@u1dkcUKJMcBPGPpG7Xn@jQd6A3Y2EjXzhLpZlW@nCKj8fJ92GD8I48uHggL5Moe@kB7FXu70q4yiKqtwx@QwCVUsVlxUUcACXuBjcVxfG/DQAkn3Vse7Oq2iQGffh@vQeLMEyf2zjZRM@/vPY1E8S/SY2IFkBdKFnisRWJGtFYimSRZFcoEhPivuO0XpGPAhjedQH2DGTPJFPsz7rZQ1MbWC6BqYWMF2A6QXA7K9j0uVtLobVnKEyG5WtUZmFyhZU9j@qr9W@5xDlzjh906YjWzmFww8" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
-<p>Ungolfed:</p>
-<pre class="lang-c prettyprint-override"><code>void func(char **s, int n, char *out) {
-    int i = 0;
-    int j = n - 1;
-    char pair[80];
-    *out = 0;
-    for (; i &lt; n; i++) {
-        if (i != j) {
-            sprintf(pair, &quot;%s %s\n&quot;, s[j], s[i]);
-            if (!strstr(out, pair)) {
-                strcat(out, pair);
-                j = i;
-                i = -1;
-            } 
-        }
-    }
-}
-</code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 316 bytes</h1>
-<p>316 bytes, it can be golfed much more.</p>
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <del>316</del> 312 bytes</h1>
+<p>Saved 4 bytes thanks to @ceilingcat</p>
 <hr />
-<p>Golfed version. <a href="https://ato.pxeger.com/run?1=TZFLboMwEIbVbU_hZBFsiVjqruLVRa8QZYNQZMygWDUGmSFNBDlJN1m0h2pPU5OQhxejsef75-Wvb9u1eDr9dFguX_-eotKQMloF77o2kNB9sEhXGVsma5DRKuk1ILHB5RLvuUKwlHEwXQVWIDi_1AI3lWjoQJWfs6G_USg-gCrGx2BV72AQAxVcjoUo8_Orx9iRcWWw3ky6h4xizLgDOUvvQnGX-nnGuKy1BomUhWOzVYfkELuGg-BT4XYjRSOkwgO1XINx1cIDb7p2S206vSxfslsrLgh7BFM4_HGKG8ouaHFmj5cl_q7dDiuhHED6Z-LOeWvQdhpJTEq6SD3h-cTLRyNHU3gZC89oY93o2szovA_ejnN_0rnolP36Vf8" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre class="lang-rust prettyprint-override"><code>fn f&lt;T:Clone&gt;(x:&amp;[T])-&gt;Vec&lt;T&gt;{let r:Vec&lt;T&gt;=x.iter().enumerate().flat_map(|(i,b)|{x.iter().take(i).map(move|a|(a.clone(),b.clone()))}).into_iter().flat_map(|(a,b)|vec![a.clone(),a,b.clone(),b]).collect();let mut y=Vec::with_capacity(r.len());y.push(r[r.len()-1].clone());y.extend(r.iter().take(r.len()-1).cloned());y}
+<p>Golfed version. <a href="https://ato.pxeger.com/run?1=VVFLbsIwEFW3PYVhQcZSsNQdCoQuegXEJoqQYybCquNEZkKBhJN0w6I9VHuaOhBK68VoPu-9-fj9w9VbOp8_a8rHk--HSW5ZPltEL6a0OId9NEoWKR_Pl6hmi3ljkJiLrkG8F5rQARdo6wKdJPR-biStCllBCzrMeNv8oki-ImguumJR7rCVLUihukbAw-zmcX7iQlsqVz3vj6LsFHeoBsmdKO_UMEu5UKUxqAj4tBv2GDth0PZRURM7xH78KHrTtFkpWUml6QBHPj2Iqt5uwCXH8VP6O4xP457QrsH928OD-BW0vqBO1wN-Lf39Cql9Q9Y8Mv8uF8NtbYjFLIdREsggZEHWGdWZdZDy6QVaOb-2sQMYNtHzaRj2PF_t1W_f9AM" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-rust prettyprint-override"><code>fn f&lt;T:Clone&gt;(x:&amp;[T])-&gt;Vec&lt;T&gt;{let r:Vec&lt;T&gt;=x.iter().enumerate().flat_map(|(i,b)|{x.iter().take(i).map(move|a|(a.clone(),b.clone()))}).into_iter().flat_map(|(a,b)|vec![a.clone(),a,b.clone(),b]).collect();let z=r.len();let mut y=Vec::with_capacity(z);y.push(r[z-1].clone());y.extend(r.iter().take(z-1).cloned());y}
 </code></pre>
 <p>Ungolfed version. <a href="https://ato.pxeger.com/run?1=fVNBboMwEJR6zCucHIqRCFJvFU3TQ7-AekEIOc6iWDU2giVpFXhJLzm0n-oX-omaYChFafdgGe_u7MzYvL0XVYmn00eF6fL28-orVQQPOgEJGShMuM42QjEUWpWrMCCPUitYUylKDMh1FMYuWa7JE_AVDT0SumtynBETbYEvEArqnr_b8EFVGRQMYXyYSoZJxnJaU-GRjVtbhD4uIQ3NyJ6BiguJFjDTeyA1qwllPm95U9cM6LfuT1czosO1lMDRDGtmM2NG-r_qcBAMSAooK2kqbOL-TyfPSKOhQqFOpm6NjGGdMXvg82ikhY3kmG18Scbd-WygmFWGpkZzB1vDzxANgoPAXcJZzrjAV9pp8CUoY1HXbOv9vCp3Nh-Ny8iS3MSDrb974AVBbXvUTmJ3a1MEt0PYTiHsPWRMtIVTs42IlF5HDnM84mzahbfL1oktSl4Yc6Wa08UxeGgWnu0z2aZ78_bp97_ANw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <pre class="lang-rust prettyprint-override"><code>fn two_element_combinations&lt;T: Clone&gt;(list: &amp;[T]) -&gt; Vec&lt;(T, T)&gt; {
@@ -109,6 +79,36 @@ fn f&lt;T: Clone&gt;(list: &amp;[T]) -&gt; Vec&lt;T&gt; {
 fn main() {
     let result = f(&amp;['a', 'b', 'c', 'd']);
     println!(&quot;{:?}&quot;, result);
+}
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 109 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>n;main(c,s)char**s;{for(n=c;s[n]||(++s)[n=1];n++)printf(&quot;%s %s %s %s &quot;,*s,s[n],s[n],s[!s[n+1]*(n-1?1:3-c)]);}
+</code></pre>
+<p><a href="https://tio.run/##PYrNCsIwEAZfRQtCfppD8KKG4IOUHOLW1IJuJdub9dX91IPCMHMZcgMRwOGWR1bUiqZLrsZIeJSpKo4UpOO0LMpa0R1HnwJbq@915LmoZiOrP01rpP3eP60/tT4Zxc4f/WHrSCcdngAyTiD0OKO8qFzzIHAy95F2@zc" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, <s>115</s> 114 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>f(**s,n,*o){for(int*w,j=n-1,i=*o=0;i&lt;n;i-=i-j&amp;&amp;!strstr(o,w)?j=i-!strcat(o,w):-1)asprintf(&amp;w,&quot;%s %s\n&quot;,s[j],s[i]);}
+</code></pre>
+<p><a href="https://tio.run/##ldDdaoMwFAfwe5/iTKhEicyvqzkZ@3oK50WWaRdxSTHphBVffS7GdhA7GBU50f850R@hIe0I305Tg4JAYo4D4R8a0SPGVTDgtuBhjFkRiCLK2S3PWViwsPW8K6l6fSOBB/@u1dkcUKJMcBPGPpG7Xn@jQd6A3Y2EjXzhLpZlW@nCKj8fJ92GD8I48uHggL5Moe@kB7FXu70q4yiKqtwx@QwCVUsVlxUUcACXuBjcVxfG/DQAkn3Vse7Oq2iQGffh@vQeLMEyf2zjZRM@/vPY1E8S/SY2IFkBdKFnisRWJGtFYimSRZFcoEhPivuO0XpGPAhjedQH2DGTPJFPsz7rZQ1MbWC6BqYWMF2A6QXA7K9j0uVtLobVnKEyG5WtUZmFyhZU9j@qr9W@5xDlzjh906YjWzmFww8" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+<p>Ungolfed:</p>
+<pre class="lang-c prettyprint-override"><code>void func(char **s, int n, char *out) {
+    int i = 0;
+    int j = n - 1;
+    char pair[80];
+    *out = 0;
+    for (; i &lt; n; i++) {
+        if (i != j) {
+            sprintf(pair, &quot;%s %s\n&quot;, s[j], s[i]);
+            if (!strstr(out, pair)) {
+                strcat(out, pair);
+                j = i;
+                i = -1;
+            } 
+        }
+    }
 }
 </code></pre>
 </div>
