--- a/q/229445.html
+++ b/q/229445.html
@@ -39,8 +39,23 @@
 <div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>35</s> <s>34</s> <s>24</s> <s>26</s> <s>24</s> 20 bytes</h1>
 <pre><code>ạSỊɗþæ*LT€ị¹_«/$€Ṣ)E
 </code></pre>
-<p><a href="https://tio.run/##tVQ7TgNBDO19jjTQYHMHOjo@EjRUNCgdFSU0SNBBQQ1IFEBJs6yUIqsUHGNykcX/HYVFCAmiTTzj@Pk9ezx7cjydnvV9eb/fKe3Vx103657Wt3eXF6@lvZ43R/OXjYlsmoe1rX5xW5rH5fkMoLRv7N3nrz2Hi5vSPE/2JPZ0s7tkc9D3REj8BTbID2Dsecsf9fMSUC2BuN1qnAR5vCCBF@LXGI3QONBf2ZIxaRYHWUCgEBwjrKaCMlahIMGZNUVLahr2KAJMHSCFippXxXp@@0sr9uSm1AOdgJIiSYaaFWiN8rZBtHRYK8J0R6vIGaIr0fMARN0EkGdEJsWSpVFndEKd1nSAKO23BpSNDbASF0x27lQdqOmO4jECMGtzP7pYq@aPswUCvLkxvYDB5g3CVQd5rbIGHRNd6BNerLzO5g1eyerZvmS3uTNe3didyEIrWGakHE3y2cohTSzFHFbYuDRYYUcgOAL5iQ5H6Og7Oj8dP0gf7ngnIEJ6zW8tSzGYd6V6i2SeOv9we@jfyT4B" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
-<p>Input as a list of lists of pairs of coordinates.</p>
+<p><a href="https://tio.run/##tVQxTgNBDOz9DhposPkDHR0IiYqKBqWjooQGCTooqAEpBVDSHCelSJSCZ1w@cnjtsW8VDiEkiC7xruPxjL3eOz2ZTM77vnt/2O/a64/7xWwx3do7WF2@du3NvDmev2xvlE3zuLnbL@@65ml1MSPq2jf1HurXn@Vt1zyrPdtZXKk56nsRFv2SGtaHOPa61Y/5dUlsVqi4YS2uBCG@IEkXxW8xFmFxZL9lK85kWQDygEAxAVNYXYVkrEGpBGfWFF1Sy7DnIsDVEUuoqHlNLPL7X1YxkrtSBIJAkiJJhpoN6I1C2yhaOqwN4bqjVQKG6Er0PABRtxDlGYlL8WRpzBmdMKc3nShK@60hY1NDqgSCxc9dqgN13VE8RwBnbfAzxHo1f5wtEITmxvQSBxsaxOsOQa1lTTYmtrAnvFx5wYYGr2VFti/Zfe6c1zZ@J7LQCpYZJUdTMFs5pImVmMMKG5eGK@wIhEcgP9HxCJ18R4fTwUFiuOOdwEzpdb@3LMVw3pXqLZJ56vzD7ZF/J/sE" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p>Input as a list of lists of pairs of coordinates, sorted.</p>
+<pre><code>                  )E    Test the coordinate lists for equality under:
+    þ                   Table
+ạ                       absolute difference in each coordinate
+ SỊɗ                    sums to &lt;= 1?
+ạSỊɗþ                   This creates a refreshingly vanilla adjacency matrix.
+     æ*L                Matrix power to the number of coordinates.
+        T€              Convert each row to truthy indices
+          ị¹            and index those back into the list of coordinates.
+     æ*LT€ị             Each row is now a (duplicate) connected tile.
+                €       For each row,
+            _           subtract from all coordinates
+             «/$        the minimum in each coordinate for that row.
+                 Ṣ      Sort the rows.
+</code></pre>
+<p>A little embarrassed it took me on the order of 8 hours to come up with this, but at least I got this edit history out of it.</p>
 </div>
 <div id="pu1" class="pu"><h1>Python3, 476 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>lambda a,b:sorted(G(a))==sorted(G(b))
