--- a/q/275303.html
+++ b/q/275303.html
@@ -26,12 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>086</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
-<tr d-ix="1"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>093</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
-<tr d-ix="3"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
+<tr d-ix="0"><td>133</td><td>Python 3</td><td>240903T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275315#275315">Lucenapo</a></td></tr>
+<tr d-ix="1"><td>086</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
+<tr d-ix="2"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>093</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
+<tr d-ix="4"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 86 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 133 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda x,y,z:0&lt;y&lt;13and(0&lt;z&lt;(226885215768&gt;&gt;3*y&amp;7)+29or(y==2)*(z==29)*(x%4&lt;1)*(2-0**x)/2)
+g=lambda y,m,d:(f(y,m,d),f(m,d,y),f(d,m,y))
+</code></pre>
+<p><a href="https://tio.run/##bZDBboQgGITvPgWXNsDSFnDddS3usS9hPLAFtiZFDbKJ@PIWjR7aFA4z@eZn8oc@@K@uTefZlN/S3pQEIwlkKqgIgqWyVZCKSUDOT3mecZadT/n1muLwfEYHfukcDGXJEYZTlEvU8ekoWFT@QjEe0RtHyX1vDsQSVUADV4OIgVFIWIyKJCA0G9dZoKTXvrEaNLbvnMeJ0gZ8bK@KBMTjXSiWsQ2@O@0frgVsDfX4qXtfbIwmhv/eoKLkNSM0XlZXw8PC2H2QmFG6lpnOAQmatmKEk5Qca1QnCwuRASfbu4ZxdFtkCex/wR6qP6EcBu082D@hLA3f7PwD" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><code>f</code> returns <code>0</code> for invalid, <code>1</code> for valid, <code>0.5</code> for maybe</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 86 bytes</h1>
 <p><em>A mix of my previous answer with <a href="https://codegolf.stackexchange.com/a/275304/58563">@l4m2's answer</a>.</em></p>
 <p>Expects a string of 6 digits.</p>
 <p>Returns a triplet <code>[YYMMDD, MMDDYY, DDMMYY]</code> of Boolean values (<em>true</em> for <em>valid</em>). Returns <em>valid</em> for the <em>&quot;maybe&quot;</em> cases.</p>
@@ -143,7 +152,7 @@
 )                  // end of map()
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 52 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 52 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>11Ýε7%É31αyΘ-LтL&lt;ây&gt;δšʒ`4Ör&lt;s29QP≠]€`T‰JD2δ.IDí)JQ€à
 </code></pre>
 <p><a href="https://tio.run/##AVoApf9vc2FiaWX//zExw53OtTclw4kzMc6xec6YLUzRgkw8w6J5Ps60xaHKkmA0w5ZyPHMyOVFQ4omgXVTigLBK4oKsYEQyzrQuSUTDrSlKUeKCrMOg//8xMjEyMzE" rel="nofollow noreferrer">Try it online.</a> (No test suite, since it's too slow to run more than 2-3 test cases at once.</p>
@@ -204,14 +213,14 @@ T‰            # Divmod each inner-most value by 10
               # (after which the resulting triplet is output implicitly)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;['024','402','420'].map(t=&gt;x[t%10]==(new Date(4+t.replace(/./g,c=&gt;x[c]+x[++c]+' '))+0)[8])
 </code></pre>
 <p><a href="https://tio.run/##fZbdboJAEIXv@xTcNECwyMxgK2nwqn0KYyJFNG1QidDWPr3dxbaBwhlN3MjH/C3n6L5lH1mdn16r5u5w3BSXbXo5p4ulG3HsTtw4YvvJkbsK91nlNenivGxuKVqlqXcoPp2nrCm8OGjCU1GVWV5403C6m@T2tnwVnJdBYBbXcX0/iPzlfOVfHvPjoT6WRVged976JmpfjrPNyrroL1dGmCUJZKTkJJuzOb2bayOMMRMlThjXU/pkpU9W@mSeK8zU22dfL2M5BdeTSGO4FxGNwX0hsr2MxxHjnIahnKRoiRQtkaIl6mnppyW7XBH1rvUQQyQ4qjPbf9Rp8R9i3CHjDrsaGiBYS3AtwbVEFARHjjsKGSBCUTNcawZr9RQ3QDgKPhQa2ahfSZEMw/5YjOOEcJzgnxKKZ/cPiCUJlD4rdmLFTqzYibGdGNuJsZ0MQjpm7DTGTmPsNMZOY@g0YvvGSCAC6m8RrgXmsgjMZZtAomsZYYYEaViMcwppDOfEIrfDIdHZ6WCcYLHayYdx7ZYlCT5GGMboGJEkvcc6ZKQw8LfXMkEMb8u6c2gLzKmtThee6wZbr/b9sMo2z4eNx5EfmK@Xbw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Arnauld's comment say pure <code>Date</code> won't work</p>
 </div>
-<div id="pu3" class="pu"><h1>Google Sheets, 69 bytes</h1>
+<div id="pu4" class="pu"><h1>Google Sheets, 69 bytes</h1>
 <pre><code>=bycol({A3,C3,C3;B3,A3,B3;C3,B3,A3},lambda(_,isdate(20&amp;join(&quot;-&quot;,_))))
 </code></pre>
 <p>Put the three date components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
