--- a/q/275303.html
+++ b/q/275303.html
@@ -26,19 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>133</td><td>Python 3</td><td>240903T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275315#275315">Lucenapo</a></td></tr>
+<tr d-ix="0"><td>128</td><td>Python 3</td><td>240903T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275315#275315">Lucenapo</a></td></tr>
 <tr d-ix="1"><td>086</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
 <tr d-ix="2"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>093</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
 <tr d-ix="4"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 133 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 128 bytes</h1>
 
-<pre class="lang-python prettyprint-override"><code>f=lambda x,y,z:0&lt;y&lt;13and(0&lt;z&lt;(226885215768&gt;&gt;3*y&amp;7)+29or(y==2)*(z==29)*(x%4&lt;1)*(2-0**x)/2)
-g=lambda y,m,d:(f(y,m,d),f(m,d,y),f(d,m,y))
+<pre class="lang-python prettyprint-override"><code>f=lambda y,m,d:(0&lt;m&lt;13)*(0&lt;d&lt;(62648012&gt;&gt;2*m&amp;3)+29or((y%4,m,d)==(0,2,29))*(2-0**y)/2)
+g=lambda y,m,d:(f(y,m,d),f(d,y,m),f(d,m,y))
 </code></pre>
-<p><a href="https://tio.run/##bZDBboQgGITvPgWXNsDSFnDddS3usS9hPLAFtiZFDbKJ@PIWjR7aFA4z@eZn8oc@@K@uTefZlN/S3pQEIwlkKqgIgqWyVZCKSUDOT3mecZadT/n1muLwfEYHfukcDGXJEYZTlEvU8ekoWFT@QjEe0RtHyX1vDsQSVUADV4OIgVFIWIyKJCA0G9dZoKTXvrEaNLbvnMeJ0gZ8bK@KBMTjXSiWsQ2@O@0frgVsDfX4qXtfbIwmhv/eoKLkNSM0XlZXw8PC2H2QmFG6lpnOAQmatmKEk5Qca1QnCwuRASfbu4ZxdFtkCex/wR6qP6EcBu082D@hLA3f7PwD" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p><code>f</code> returns <code>0</code> for invalid, <code>1</code> for valid, <code>0.5</code> for maybe</p>
+<p><a href="https://tio.run/##bZBBbsMgFET3nIJNKyCkBexGjWOy7CUsL2iB1FIxFiZSOb2LXbJoVNiM5s0ffZhS/PRjtSxWfin3rhVM1FHdINa6lleYZKFbdBCH@pVxcT4L4h4rvBNHHxBKD/WaxlIiRgUVR5wHxJ4RkvCzwOByV2rRJjC1SNMsf4WjCePFBu@gVtHEwRk4uMmHSIA2Fr6VqQbAfGJIzRor5imYeA0j5Bs03x9mik3xGLDi7wYdo08vlOXL@26@OpS7d4pwxrYy6wNUcBg7nl9T0brHPVi9lD0Y1HgxKEfLIitw/4Eb1HdQzbMJEd4@QUorilx@AA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><code>f</code> returns <code>1</code> if <code>y,m,d</code> is valid, <code>0</code> if <code>y,m,d</code> is invalid and <code>0.5</code> if <code>y,m,d</code> is maybe valid.</p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6), 86 bytes</h1>
 <p><em>A mix of my previous answer with <a href="https://codegolf.stackexchange.com/a/275304/58563">@l4m2's answer</a>.</em></p>
