--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240903T060630Z
+"   /golfscore                                      20240903T062608Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/201329.html">Day of the week of an ambiguous date            : 0201329</a>
 <a href="q/275303.html">Is it a date format of YYMMDD MMDDYY and/or DDMM: 0275303</a>
 <a href="q/235964.html">Implement the hyperfactorial                    : 0235964</a>
 <a href="q/17294.html">Golfing A Weasel Program                        : 0017294</a>
