--- a/q/22.html
+++ b/q/22.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>083</td><td>Rust</td><td>240806T150456Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/274733#274733">mousetai</a></td></tr>
+<tr d-ix="0"><td>8381</td><td>Rust</td><td>240806T150456Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/274733#274733">mousetai</a></td></tr>
 <tr d-ix="1"><td>156</td><td>Go</td><td>240624T174718Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/273773#273773">bigyihsu</a></td></tr>
 <tr d-ix="2"><td>082</td><td>Forth gforth</td><td>240701T131044Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/273854#273854">reffu</a></td></tr>
 <tr d-ix="3"><td>181</td><td>Rust</td><td>240624T182250Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/273774#273774">bigyihsu</a></td></tr>
@@ -95,10 +95,13 @@
 <tr d-ix="66"><td>069</td><td>Python</td><td>110129T085338Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/178#178">Keith Ra</a></td></tr>
 <tr d-ix="67"><td>044</td><td>GolfScript</td><td>110129T043051Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/172#172">C. K. Yo</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 83 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>|d|(0..).zip(d).fold(0,|a,(b,&amp;c)|a+[(c-48)*2%10+(c-48)/5,c-48][b%2^d.len()%2])%10&lt;1
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <del>83</del> 81 bytes</h1>
+<pre class="lang-rust prettyprint-override"><code>|d|(0..).zip(d).fold(0,|a,(b,&amp;c)|a+[(c-48)*2%10+(c-48)/5,c-48][b+d.len()&amp;1])%10&lt;1
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=fY07DoJAFEV7VoGTYN6TYYQRYfC3CUuCCYiTkIyDQWgUV2JDoYtyN36w1erc4uSe661qjnX3IFKb-7TQgObZULvalDOpYRg3IkFnlZWlWt6bWjrisW7zFlzGkJ2KA-TIZKlycGmbUsjocIttasewdXyBI255rt3v8ZS-mcSZxTc5U7tXyuIJvoyF972u5oZxqApdKz0Acr4QakrIiB9FPJxEIvQCgjj_r4S_FI9P_GkQii_dj3fpy13X8wk" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMFNpbQ8hdzEzDwNTYVqrpzUEoU0q7Q8DbXoUotYTV27pPz8HNulpSVpuhY3A2tSajQM9PQ09aoyCzRSNPXS8nNSNAx0ahJ1NJJ01JI1axK1ozWSdU0sNLWMVA0NtCFsfVMdEB0bnaSdopeTCrRIzTBWEyhvYwg1eJo1F1dBUWZeSU6eooZSda2SjkKaRpKSiaWlkbmxpYW5oZmSpqY1fiXmuJQYEGGMoZGxiamZuQWUNgCrq4W4bsECCA0A" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<ul>
+<li>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/274733?noredirect=1#comment591913_274733">@ceilingcat</a></li>
+</ul>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>164 158</s> 156 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import.&quot;fmt&quot;
