--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240903T070301Z
+"   /golfscore                                      20240903T073756Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/6474.html">Generating Minesweeper grids                    : 0006474</a>
 <a href="q/22.html">The Luhn algorithm for verifying credit card num: 0000022</a>
 <a href="q/201329.html">Day of the week of an ambiguous date            : 0201329</a>
 <a href="q/275303.html">Is it a date format of YYMMDD MMDDYY and/or DDMM: 0275303</a>
