--- a/q/275303.html
+++ b/q/275303.html
@@ -40,12 +40,26 @@
 <p><a href="https://tio.run/##fZZdbtNAFIXfu4pLJJQZJbiZO0mIQRNegA30MRjJpJNi5NqJxw2qEDtA4oVH2Afr6QZYQhibFsV1zjiSLfvzuT/jcx1/SvepW1fZtn5WlJf2sDEHZ5YrHs/HiyS6Trdia5aisJ/pdVpbMR15NHlAO7N0q8yI7fudfDpPRv5kpBIpRxO5WiTG@PNEHiq7u8kqKwYbN5BRZdPLt1luL26LtZjIqC4v6iorroSM3DbPajF4V/jbNmX1Jl1/FK6uyCzpyxlRbmtakRtTFEUpJWTIw3vROY3O5djf1GyVdR5uhJMv/ZV1Wbgyt1FeXgkv9rDdRXZvq1sh9mPKZJNiT08MidSXTMbQYJPmzg6kpFc0/PP7@93PH34/pBc0vPv1begjf5WHSbsRtfd2D2ctUpjFMWQqEFM1Mevqxl87wRgzHdBpxvkCdXKgTg7UybwIMJ/vOr39cCqmxvn0JMRwLVqHGFwXpZpaTusU45ieoZgq4CUV8JIKeEl1vHRfUnP4h1TnWgcxRBqrjnp7jI5KfIQYV8i4wmMP9RDMpXEujXNpHUCw5emRQ3pIIdUM55rBXB3H9RBWwYeiTizUg6WU7sv@synWaYV1Gr9K1HQ2f45YHEPrc2CcODBOHBgnxuPEeJwYj5NHyMeMJ43xpDGeNMaTxnDSFDc/jDREwP0twrlAXw0CfTVFINO1TGGGDOnZFMfUKsRwTGzypjlkuqY7qNPYrE3nfV27ZHGMPyM8Y/QZEcedx9pnKsDA317LNGJwWf4C" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Refer to <a href="https://codegolf.stackexchange.com/a/275307/">Arnauld's solution</a> for part of revision and version without <code>Date</code></p>
 <p>Arnauld's comment say pure <code>Date</code> won't work</p>
-<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 89 bytes</h1>
+<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 88 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>s=&gt;[2,6,8].map(p=&gt;`a3${(g=q=&gt;+s.substr((p^q)%6,2)||96)(2)%4?0:1}3232332323`[g``]&gt;g(8)-29)
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;[2,6,8].map(p=&gt;`a3${(g=q=&gt;+s.substr((p^q)%6,2)||g)(2)%4?0:1}3232332323`[g``]&gt;g(8)-29)
 </code></pre>
-<p><a href="https://tio.run/##fZZPbtpAGMX3nGKEGjGjOA7zjaE4lcmqvUCWlIoJGagrB4PHIKEkN6jUTZftPXqeXKBHoGM3rXDMG1saJP/8/Ru/Z/xF77SdF@m6vFjld@awSA42GU8oGAajaXiv13ydjGdavXngy2STjM9taLe3tiw4X3/aiLNhQOLxMR4KTuIsuu5fySdF7qyX2WQ5m03HSz4SFxSLw73e3xqWsLLYmk5hNtu0MLy7sF0RFkbffUgzc7NfzXlfhGV@UxbpaslFaNdZWvLux5W7bZEX7/X8M3cNsGTMHjqMZaZkE2YDFoahZlOX3sGXoEt2fikCd1N1FMY6uOBWvHNX5vnK5pkJs3zJXbCD9RKanSn2nO8CloqqxI4lCTM7nXE9SadCsGvW@/3r2/OP727tsSvWe/75tedSPolDvz4YW@jMmuZPp0YSsziGTHpyyipntZ/sFCPMlCdOEa7n6ZM8fZKnT6KRh7l6f3XTZgrXU30fw70o5WNwX6SsejkdJwnndAzllB4tSY@WpEdLsqGll5ZqN9ZINq41EEGkcNTRbK/RUYuvEOEOCXd4rKEWgrUUrqVwLaU8CI4cHSmkhSSKGuBaA1irobgWwlHwocgTG/VPUlK1w/6zCMcpieMUfpXIaDB8i1gcQ@mTx07ksRN57ETYToTtRNhODiEdE3YaYacRdhphpxF0mqTqxEhBBNRfI1wLzFUhMFfVBBJdzSRmSJCORTinkj6Gc2KRV8Mh0VXTwTiFxVpN3o6rtyyO8WeEY4Q@I@K48VjbTHoY@NurmUIMbssf" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##fZZPbtpAGMX3nGKEGjGjOA7zDVCcymTVXiBLSsWEDK4rB4PHIKEkN6jUTZftPXqeXKBHoGM3rXDMG1saJP/8/Ru/Z/xF77RdFOm6vFjld@awjA82nkwpGAXjWXiv13wdT@ZavXngSbyJJ@c2tNtbWxacrz9txNkoIPH4mAhO4mxw3b@ST4rcWS/zaTKfzyYJH4sLisThXu9vDYtZWWxNpzCbbVoY3l3arggLo@8@pJm52a8WvC/CMr8pi3SVcBHadZaWvPtx5W5b5sV7vfjMXX0WT9hDh7HMlGzKbMDCMNRs5tI7@BJ0yc4vReBuqo7CWAeX3Ip37soiX9k8M2GWJ9wFO1gvodmZYs/5LmCpqErsWBwzs9MZ19N0JgS7Zr3fv749//ju1h67Yr3nn197LuWTOPTrg7Glzqxp/nRqJDGLIsikJ6esclb7yU4xwkx54hThep4@ydMnefokGnuYq/dXN22mcD3V9zHci1I@BvdFyqqX03GScE7HUE7p0ZL0aEl6tCQbWnppqXZjjWTjWgMRRApHHc32Gh21@AoR7pBwh8caaiFYS@FaCtdSyoPgyIMjhbSQRFFDXGsIazUU10I4Cj4UeWKj/klKqnbYfzbAcUriOIVfJXIwHL1FLIqg9MljJ/LYiTx2ImwnwnYibCeHkI4JO42w0wg7jbDTCDpNUnVipCAC6q8RrgXmqhCYq2oCia5mEjMkSMcGOKeSPoZzYpFXwyHRVdPBOIXFWk3ejqu3LIrwZ4RjhD4joqjxWNtMehj426uZQgxuyx8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Without date it's possibly shorter</p>
+<pre class="lang-javascript prettyprint-override"><code>s =&gt; (
+    g = q =&gt;
+        +s.substr(
+            (p^q)%6,   // magic from Arnauld
+            2          // XOR q=0 q=2 q=8
+        ) || g,        // p=2  2   0   4         If value is 0, replace
+    [2,6,8].map(       // p=6  0   4   2         with NaN so it won't
+        p =&gt;           // p=8  2   4   0         pass date range test
+            `a3${      // 0 unused, 2 decided by year
+            g(2)%4
+            }3232332323`[g(0)]
+        &gt;= g(8) - 28   // Shifted by 28 to fit in string
+)
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>71</s> 61+4=65 bytes</h1>
 
