--- a/q/275303.html
+++ b/q/275303.html
@@ -51,7 +51,7 @@
         +s.substr(
             (p^q)%6,   // magic from Arnauld
             2          // XOR q=0 q=2 q=8
-        ) || g,        // p=2  2   0   4         If value is 0, replace
+        ) || NaN,      // p=2  2   0   4         If value is 0, replace
     [2,6,8].map(       // p=6  0   4   2         with NaN so it won't
         p =&gt;           // p=8  2   4   0         pass date range test
             `a3${      // 0 unused, 2 decided by year
@@ -60,6 +60,7 @@
         &gt;= g(8) - 28   // Shifted by 28 to fit in string
 )
 </code></pre>
+<p><a href="https://tio.run/##fZZdbptAFIXfs4qRJcczMiGeO7Zr0uA8tRvIo@soxMGUihibwUhW064gUl/62O6j68kGugR3hqaVCT4DEiA@zv0ZzrX5FFWRXhTpujxb5ffxfhnudTidkTf2JnP/IVrzdTjlSbgJp1XY177e3umy4Hx9sxHdsUfi8TERt7eXUp1S0OfVGV2pm69VNziVFwkn0R1eSjFN@ESIfRFvtmkR885Sd4RfxNH9@zSLr3erBR8Iv8yvyyJdJVz4ep2lJe98WJnHlnnxLlp85CYrC6fs8wljWVyyGdMe830/YnMWMgNfROesfy4885DdilgbuORavDV3FvlK51nsZ3nCjdjA@uDHVVzsOK88lgqbomJhyHg0S@f2olMW27gjBLtivd@/vj3/@G6OPXbBes8/n3om8BexH9QbY8so03HzdFIjiVkQQCYdMaWNaUtjxxhhphw6RTifo05y1EmOOokmDmbyPUS7u2MxFc6nBi6Ga1HKxeC6SGlrOa6ThGMahmJKh5ekw0vS4SXZ8NJLSfb0F8nGvQYiiBRWHfT2Gh2U@AoRrpBwhYceaiGYS@FcCudSyoFgy8MDh7SQRKoRzjWCuRqOayGsgi9FHlmof5aSqi37z4ZYpyTWKfxTIoej8RvEggBanxzjRI5xIsc4ER4nwuNEeJwMQj4mPGmEJ43wpBGeNIKTJsnuGCmIgPtrhHOBviwCfdkikOlqJjFDhjRsiGMq6WI4Jja5bQ6ZznYHdQqb1Xbe1tVLFgT4M8IwQp8RQdB4rW0mHQz87dVMIQaX5Q8" rel="nofollow noreferrer">Modifying Arnauld's also result 88, with <code>maybe</code> be <code>false</code></a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>71</s> 61+4=65 bytes</h1>
 
