--- a/q/229445.html
+++ b/q/229445.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td>Jelly</td><td>240902T181156Z</td><td><a href="https://codegolf.stackexchange.com/questions/229445/but-is-it-art/275313#275313">Unrelate</a></td></tr>
+<tr d-ix="0"><td>018</td><td>Jelly</td><td>240902T181156Z</td><td><a href="https://codegolf.stackexchange.com/questions/229445/but-is-it-art/275313#275313">Unrelate</a></td></tr>
 <tr d-ix="1"><td>476</td><td>Python3</td><td>240829T174034Z</td><td><a href="https://codegolf.stackexchange.com/questions/229445/but-is-it-art/275244#275244">Ajax1234</a></td></tr>
 <tr d-ix="2"><td>158</td><td>R</td><td>210617T114752Z</td><td><a href="https://codegolf.stackexchange.com/questions/229445/but-is-it-art/229902#229902">digEmAll</a></td></tr>
 <tr d-ix="3"><td>030</td><td>Jelly</td><td>210611T004546Z</td><td><a href="https://codegolf.stackexchange.com/questions/229445/but-is-it-art/229453#229453">hyper-ne</a></td></tr>
@@ -36,25 +36,24 @@
 <tr d-ix="7"><td>039</td><td>MATL</td><td>210610T230807Z</td><td><a href="https://codegolf.stackexchange.com/questions/229445/but-is-it-art/229449#229449">Luis Men</a></td></tr>
 <tr d-ix="8"><td>080</td><td>J</td><td>210610T224914Z</td><td><a href="https://codegolf.stackexchange.com/questions/229445/but-is-it-art/229448#229448">xash</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>35</s> <s>34</s> <s>24</s> <s>26</s> <s>24</s> <s>20</s> 19 bytes</h1>
-<pre><code>ạSỊɗþæ*LT€ị¹_Ṃ$€Ṣ)E
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>35</s> <s>34</s> <s>24</s> <s>26</s> <s>24</s> <s>20</s> <s>19</s> 18 bytes</h1>
+<pre><code>ạSỊɗþæ*LT€ị¹_Ɲ€Ṣ)E
 </code></pre>
-<p><a href="https://tio.run/##tVQxTgNBDOz9DhqobP5ARwdCoqKiQemoKEmDBB0U1IBEEVHSHCelIErBMzYfObz22LcKQQgJoku863g8Y6/3zk4nk4thKG8PB6W//rhfzBfPO/uHq@lL6W/eu5PSTbfqpnvc3huWd6V7Wl3OiUr/qt4j/fqzvC3dTO357uJKzfEwiLDol9SwPsSx161@zK9LYrNC1Q1rcTUI8RVJuqh@i7EIiyP7rVtxJssCkAcEigmYyuoqJGMNSjU4s6bomlrGPVcBro5YQkXLa2KR3/@yipHclSIQBJIUSTLWbEBvFNpG0dJxbQjXHa0SMERXoucBiLqFKM9IXIonS2PO6IQ5velEUdpvDRmbGlIlECx@7tIcqOuO4jkCOGuDnyHWq/njbIEgNDemlzjY0CBedwhqrWuyMbGFPeHlxgs2NHgtK7J9ye5z57y28TuRhTawzCg5moLZyiFNrMQcNti4NNxgN0B4A@QnOt5AJ9/R4XRwkBjueCcwU3rd7y1LMZx3pXmLZJ42/3h75N/JPgE" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
-<p><em>-1 thanks to emanresu A</em></p>
+<p><a href="https://tio.run/##tVSxSgRBDO3zJ1ol/oOdnSJYWdnIdVaW2gjaaWFloYLFYWmzLlzhcoKfsfcjayZ5yQ7nigh67F1mcnl5L5nMHh/NZqfD0L/e7/bt5cdtt@ieNnf2VufPfXv11hy@35Vl87CxPSxv@uZxdbYg6tsX9e7r15/ldd/M1Z5sdRdqDoZBhEW/pIb1IY69bvVjfl0SmxUqbliLK0GIL0jSRfFbjEVYHNlv2YozWRaAPCBQTMAUVlchGWtQKsGZNUWX1DLuuQhwdcQSKmpeE4v8/pdVjOSuFIEgkKRIkrFmA3qj0DaKlo5rQ7juaJWAIboSPQ9A1C1EeUbiUjxZGnNGJ8zpTSeK0n5ryNjUkCqBYPFzl@pAXXcUzxHAWRv8DLFezR9nCwShuTG9xMGGBvG6Q1BrWZONiS3sCS9XXrChwWtZke1Ldp8757WN34kstIJlRsnRFMxWDmliJeawwsal4Qo7AeEJyE90PEEn39HhdHCQGO54JzBTet3vLUsxnHeleotknjr/eHvk38k@AQ" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p><em>-1 and inspiration for another -1 thanks to emanresu A</em></p>
 <p>Input as a list of lists of pairs of coordinates, sorted.</p>
-<pre><code>                 )E    Test the coordinate lists for equality under:
-    þ                  Table
-ạ                      absolute difference in each coordinate
- SỊɗ                   sums to &lt;= 1?
-ạSỊɗþ                  This creates a refreshingly vanilla adjacency matrix.
-     æ*L               Matrix power to the number of coordinates.
-        T€             Convert each row to truthy indices
-          ị¹           and index those back into the list of coordinates.
+<pre><code>                )E    Test the coordinate lists for equality under:
+    þ                 Table
+ạ                     absolute difference in each coordinate
+ SỊɗ                  sums to &lt;= 1?
+ạSỊɗþ                 This creates a refreshingly vanilla adjacency matrix.
+     æ*L              Matrix power to the number of coordinates.
+        T€            Convert each row to truthy indices
+          ị¹          and index those back into the list of coordinates.
      æ*LT€ị            Each row is now a (duplicate) connected tile.
-               €       For each row,
-            _          subtract from all coordinates
-             Ṃ$        the lexicographically minimum coordinate.
-                Ṣ      Sort the rows.
+              €       For each row,
+            _Ɲ        take the coordinate-wise differences of adjacent pairs.
+               Ṣ      Sort the rows.
 </code></pre>
 <p>A little embarrassed it took me on the order of 8 hours to come up with this, but at least I got this edit history out of it.</p>
 </div>
