--- a/q/275303.html
+++ b/q/275303.html
@@ -49,7 +49,7 @@ req.send()
 eval(req.responseText)
 m = moment
 </code></pre>
-<p>Sorry no TIA, don't know how to import <code>momentjs</code> there. Can probably be golfed more.</p>
+<p>Can probably be golfed more. Sorry no TIO, don't know how to import <code>momentjs</code> there.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
 
