--- a/q/177668.html
+++ b/q/177668.html
@@ -26,15 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>051</td><td>Wolfram Language Mathematica</td><td>181217T061805Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177687#177687">att</a></td></tr>
-<tr d-ix="1"><td>026</td><td>Charcoal</td><td>181216T234838Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177682#177682">Neil</a></td></tr>
-<tr d-ix="2"><td>078</td><td>Python 2</td><td>181218T034609Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177719#177719">Chas Bro</a></td></tr>
-<tr d-ix="3"><td>010</td><td>Jelly</td><td>181216T234943Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177683#177683">Jonathan</a></td></tr>
-<tr d-ix="4"><td>012</td><td>Jelly</td><td>181216T193333Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177670#177670">Erik the</a></td></tr>
-<tr d-ix="5"><td>090</td><td>JavaScript ES6</td><td>181216T213612Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177675#177675">Arnauld</a></td></tr>
-<tr d-ix="6"><td>015</td><td>05AB1E</td><td>181217T101910Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177694#177694">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>103</td><td>Clojure</td><td>240903T144735Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/275322#275322">NikoNyrh</a></td></tr>
+<tr d-ix="1"><td>051</td><td>Wolfram Language Mathematica</td><td>181217T061805Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177687#177687">att</a></td></tr>
+<tr d-ix="2"><td>026</td><td>Charcoal</td><td>181216T234838Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177682#177682">Neil</a></td></tr>
+<tr d-ix="3"><td>078</td><td>Python 2</td><td>181218T034609Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177719#177719">Chas Bro</a></td></tr>
+<tr d-ix="4"><td>010</td><td>Jelly</td><td>181216T234943Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177683#177683">Jonathan</a></td></tr>
+<tr d-ix="5"><td>012</td><td>Jelly</td><td>181216T193333Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177670#177670">Erik the</a></td></tr>
+<tr d-ix="6"><td>090</td><td>JavaScript ES6</td><td>181216T213612Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177675#177675">Arnauld</a></td></tr>
+<tr d-ix="7"><td>015</td><td>05AB1E</td><td>181217T101910Z</td><td><a href="https://codegolf.stackexchange.com/questions/177668/approximate-the-proportion-of-integers-with-neighboring-factors/177694#177694">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>69</s> <s>68</s> <s>61</s> <s>52</s> 51 bytes</h1>
+<div id="pu0" class="pu"><h1>Clojure, 103 bytes</h1>
+<pre><code>#(/(count(for[i(range 1000000):when(first(for[j(range 2 %):when(=(mod i(*(inc j)j))0)]j))]i))1000000.0)
+</code></pre>
+<p>The input is &quot;3-indexed&quot;, so you need to call it like this to test the case n = 12:</p>
+<pre><code>(def f #(...))
+((comp f (partial + 3)) 12)
+; 0.215085
+</code></pre>
+<p><a href="https://tio.run/##LY3BCsIwEETv/YoFEXYValopiOKXSA@hTXRDuwkxxc@PQTOHubxh3rR4t0WTM87GgoUdnnDymyS0Pj4Yo5angU79QtfPywhaju8/d5X3sK/sjqufgfGALBM4ckSKxtIjE9WbVhE1DYbIkhYBLMI1FDcGHRPrBY5wJoKuL7MbqLbvBnUZcv4C" rel="nofollow noreferrer">TIO</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>69</s> <s>68</s> <s>61</s> <s>52</s> 51 bytes</h1>
 <pre><code>(-##&amp;@@@-1^#).GCD@@@(1/(# #+3#+2))&amp;@*Subsets@*Range
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7X0NXWVnNwcFB1zBOWVPP3dkFyNYw1NdQVlDWNlbWNtLUVHPQCi5NKk4tKXbQCkrMS0/9H1CUmVcSraxrl@agHKtWF5ycmFcHlok2NI79DwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -48,7 +59,7 @@
 </code></pre>
 <p><code>GCD</code> evaluates to <code>0</code> with no arguments, in contrast to <code>LCM</code> which does not evaluate.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
 
 <pre><code>ＦＮ⊞υ×⁺²ι⁺³ιＩ∕ＬΦΠυ¬⌊Ｅυ﹪ιλΠυ
 </code></pre>
@@ -93,7 +104,7 @@
 
 <p><a href="https://tio.run/##XU87a8MwEJ7jX6HxBMrgZAlkKsniIYkg2UIHVb7EwrJlZCkPSn@7ejKmQ284jo/vdbpRXjtlU5JxbCAKdsS7Cggl59vi5jyDgxqg6ocYjrH7Qg9csIvpcARp4wgrwQwh073ONw3705HftSX0k8DvYvFsjEUG0g3QEjJF5nUa0KvgPBDXktvB1dE6@AhVX@Mro3OrFeeZQdUW//pWfdibh6kRpCe1DrB7a4u7JmcJNgnnXFL/FNKbnjhqDHCOHczaUrCzNRqzcZlf4duUyk1aPuwv" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 78 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 78 bytes</h1>
 
 
 
@@ -104,7 +115,7 @@
 
 <p>Returns the approximate decimal to +5 digits; uses the naive brute force approach <a href="https://codegolf.stackexchange.com/users/20260/xnor">xnor</a> suggests in comments on the question.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 14 13 </s> 10 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 14 13 </s> 10 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <p>-1 using Erik the Outgolfer's idea to take the mean of a list of zeros and ones.<br />
 -3 by using 3-indexing (as allowed in the question) - thanks to Dennis for pointing this out.</p>
 <pre><code>ḊPƝḍⱮ!Ẹ€Æm
@@ -125,7 +136,7 @@
         Æm - mean
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 12 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 12 bytes</h1>
 
 <pre><code>Ḋ×‘$ḍẸ¥ⱮP$Æm
 </code></pre>
@@ -136,7 +147,7 @@
 
 <p><a href="https://codegolf.stackexchange.com/users/12012/dennis">Dennis</a> noticed I can 2-index as well.</p>
 </div>
-<div id="pu5" class="pu"><h1>JavaScript (ES6), <s> 94 92 </s> 90 bytes</h1>
+<div id="pu6" class="pu"><h1>JavaScript (ES6), <s> 94 92 </s> 90 bytes</h1>
 <p><em>Saved 2 bytes thanks to @Shaggy + 2 more bytes from there</em></p>
 <p>Returns a decimal approximation.</p>
 
@@ -151,7 +162,7 @@
 </code></pre>
 <p><a href="https://tio.run/##FU7JTsMwEL3zFT50mWkmLgGBRMGpOPAVltVOVrrZjoNQUJX8ekgO7/BWvTP/cpuHk/@JrSvKcawUWGKlDXnVqQRVavcV2DghLaVkalQUdZt46KbAptlCrYApm2K8ryFbMjHuMgRPDeJurnyGwH/g0cgbe4ADXebNSLFs3a2EQqXxcFkWHwniaqUteTO@64TEM4lXEm8kkqcJL@ZBVi58cf4NVqhU5M627lrKq6vhyLC42x5nfXGHIJSYLiPKsztZWIutWGMvBjWZQT@aiQedmP6IOP4D" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ì©!Lε®LüP¦Öà}ÅA
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/177683/52210"><em>@JonathanAllan</em>'s Jelly answer</a>, so also extremely slow.</p>
